<resources>
    <string name="app_name">WhatsappAndroid</string>
    <string name="loginButton">Login</string>
    <string name="registerButton">Register</string>
    <string name="loginUsername">Username</string>
    <string name="loginPassword">Password</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="backButton">Back</string>
    <string name="nickname">Nickname</string>
    <string name="add_contact">Add Contact</string>
    <string name="server">Server</string>
    <string name="BaseUrl">http://10.0.2.2:7227/</string>
    <string name="title_activity_settings2">SettingsActivity2</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="payAttenrion">Pay Attention!</string>
    <string name="UsernameRequired">Username is Required</string>
    <string name="PasswordRequired">Password is Required</string>
    <string name="IncorrectInPut">Username or Password is Incorrect</string>
    <string name="ConfirmPasswordReqires">Confirm Password is Required</string>
    <string name="NicknameRequired">Nickname is Required</string>
    <string name="InvalidUsername">Username must be at least 3 letters</string>
    <string name="PasswordsNotEqual">Passwords are not equal</string>
    <string name="PasswordInvalid">Password must contain at least one number and one big character and the length can be between 6-20 characters</string>
    <string name="ServerRequired">Server is Required</string>
    <string name="ContactAlreadyExist">This Contact Already Exists</string>
</resources>