<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.RegisterActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="50dp">

        <EditText
            android:id="@+id/editTextUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginBottom="10dp"
            android:hint="@string/loginUsername"
            android:minHeight="48dp"
            android:inputType="textPersonName"
            android:importantForAutofill="no"/>
        <EditText
            android:id="@+id/editTextNickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginBottom="10dp"
            android:hint="@string/nickname"
            android:minHeight="48dp"
            android:inputType="textPersonName"
            android:importantForAutofill="no"/>

        <EditText
            android:id="@+id/editTextPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/loginPassword"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:importantForAutofill="no"/>
        <EditText
            android:id="@+id/editTextPasswordCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/confirmPassword"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:importantForAutofill="no"/>

        <Button
            android:id="@+id/RegisterButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/registerButton"
            android:textAllCaps="false"
            android:backgroundTint="#CCCCCC"/>
        <Button
            android:id="@+id/BackButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/backButton"
            android:textAllCaps="false"

            android:backgroundTint="#CCCCCC"/>




    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>