<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background"

    tools:context=".Activities.AddContactActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="50dp">

        <EditText
            android:id="@+id/editTextUsername2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginBottom="10dp"
            android:hint="@string/loginUsername"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:importantForAutofill="no"/>

        <EditText
            android:id="@+id/editTextNickName2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/nickname"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:importantForAutofill="no"/>
        <EditText
            android:id="@+id/editTextServer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:ems="10"
            android:hint="@string/server"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:importantForAutofill="no"/>

        <Button
            android:id="@+id/addContactButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/add_contact"
            android:textAllCaps="false"
            android:backgroundTint="#CCCCCC"/>
        <Button
            android:id="@+id/backContactButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/backButton"
            android:textAllCaps="false"

            android:backgroundTint="#CCCCCC"/>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>